fix bg attachment on iphone

--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -5,7 +5,9 @@
   height: 100vh;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+  @include pad{
+    background-attachment: fixed;
+  }
 }
 
 
@@ -128,7 +130,9 @@
   background-image: url(https://images.unsplash.com/photo-1534258936925-c58bed479fcb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80);
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+  @include pad{
+    background-attachment: fixed;
+  }
   &::after{
         content: "";
           position: absolute;
